# aces_container

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aces_Writer.cpp  aces_Writer.h  aces_attributestructs.cpp  aces_attributestructs.h  aces_crossplat.h  aces_errors.h  aces_formatter.cpp  aces_formatter.h  aces_genericWriter.h  aces_iostat.cpp  aces_iostat.h  aces_items.h  aces_log.h  aces_md5.cc  aces_md5.hh  aces_timing.cpp  aces_timing.h  aces_types.h  aces_typesAndRationals.cpp  aces_typesAndRationals.h  aces_writeattributes.cpp  aces_writeattributes.h
config/: AcesContainer.pc.in  AcesContainerConfig.cmake.in  AcesContainerConfigVersion.cmake.in
